# backend/app/Http/Requests/Bus/StoreBusRequest.php
@@ -35,8 +35,8 @@ class StoreBusRequest extends FormRequest
     public function messages(): array
     {
         return [
-            'ruta_id.exists' => 'La ruta seleccionada no existe',
-            'tipo_bus_id.exists' => 'El tipo de bus seleccionado no existe',
+            'ruta_id.exists' => 'La ruta seleccionada no existe.',
+            'tipo_bus_id.exists' => 'El tipo de bus seleccionado no existe.',
         ];
     }
 }
