# backend/app/Models/Dia.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Dia extends Model
 {
@@ -12,4 +13,9 @@ class Dia extends Model
         'nombre',
         'orden',
     ];
+
+    public function horarios(): HasMany
+    {
+        return $this->hasMany(Horario::class);
+    }
 }
