# backend/app/Models/Operador.php
@@ -48,4 +48,9 @@ class Operador extends Model
     {
         return $this->hasMany(Bus::class);
     }
+
+    public function horarios(): HasMany
+    {
+        return $this->hasMany(Horario::class);
+    }
 }
